--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Upload Photos</title>
+</head>
+<body>
+  <h1>Upload Your Photos</h1>
+  <iframe
+    src="https://script.google.com/macros/s/AKfycbwupZCBYwAnpARwNNPjhJ8cn_Dx2gPMIOqwQz1b60rYEWRHSL_PusphmVBePgc2qNB3/exec"
+    width="100%"
+    height="500px"
+    style="border: none;">
+  </iframe>
+</body>
+</html>
 
