--- a/index.html
+++ b/index.html
@@ -1,18 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Upload Photos</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Upload Photos</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            min-height: 100vh;
+            background-image: url('https://drive.google.com/file/d/1dWtFK88mM6tXNrSRUbLF4KM4dPSRNWSZ/view?usp=drive_link');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .container {
+            background-color: rgba(255, 255, 255, 0.9);
+            padding: 2rem;
+            border-radius: 10px;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+            width: 90%;
+            max-width: 800px;
+        }
+
+        h1 {
+            text-align: center;
+            color: #333;
+            margin-bottom: 2rem;
+        }
+
+        iframe {
+            width: 100%;
+            height: 500px;
+            border: none;
+        }
+    </style>
 </head>
 <body>
-  <h1>Upload Your Photos</h1>
-  <iframe
-    src="https://script.google.com/macros/s/AKfycbxtDEHxIm_aByoe5DnNs3PKpGtj15rtwpehAEb6QsmIz_ND8p8DboSKYyesLUnqhiL6/exec"
-    width="100%"
-    height="500px"
-    style="border: none;">
-  </iframe>
+    <div class="container">
+        <h1>Upload Your Photos</h1>
+        <iframe
+            src="https://script.google.com/macros/s/AKfycbxtDEHxIm_aByoe5DnNs3PKpGtj15rtwpehAEb6QsmIz_ND8p8DboSKYyesLUnqhiL6/exec"
+            height="500px">
+        </iframe>
+    </div>
 </body>
 </html>
-
