--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             margin: 0;
             padding: 0;
             min-height: 100vh;
-            background-image: url('IMG_3393.jpg');
+            background-image: url('IMG_3393.JPG');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
