--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Upload Your Photos</h1>
+    <div class="container2">
+        //<h1>Upload Your Photos</h1>
         <iframe
             src="https://script.google.com/macros/s/AKfycbwRSq5F4IVVA0YlyS8AQeQ9HY3u3Go5b5Tw-0bMoU-R0MHGHJeY3fJ_Dzm7qNcyI9Du/exec"
             height="200px">
