--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             min-height: 100vh;
             background-image: url('IMG_3393.JPG');
             background-size: cover;
-            background-position: center;
+            background-position: bottom;
             background-repeat: no-repeat;
             display: flex;
             flex-direction: column;
@@ -42,12 +42,9 @@
     </style>
 </head>
 <body>
-    <div class="container2">
-        //<h1>Upload Your Photos</h1>
         <iframe
             src="https://script.google.com/macros/s/AKfycbwRSq5F4IVVA0YlyS8AQeQ9HY3u3Go5b5Tw-0bMoU-R0MHGHJeY3fJ_Dzm7qNcyI9Du/exec"
             height="200px">
         </iframe>
-    </div>
 </body>
 </html>
