--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             min-height: 100vh;
             background-image: url('IMG_3393.JPG');
             background-size: cover;
-            background-position: bottom;
+            background-position: center;
             background-repeat: no-repeat;
             display: flex;
             flex-direction: column;
@@ -34,11 +34,15 @@
             margin-bottom: 2rem;
         }
 
-        iframe {
-            width: 100%;
-            height: 200px;
-            border: none;
-        }
+      iframe {
+    width: 100%;
+    height: 200px;
+    border: none;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    z-index: 1000; /* Optional, to ensure it's above other content if needed */
+}
     </style>
 </head>
 <body>
