--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </head>
 <body>
         <iframe
-            src="hhttps://script.google.com/macros/s/AKfycbyJnFdR4mBaW5m-WtSS68godsXUp5YNVkPmLI7P-JzFQoyEh3ZARhTXqUyjNXlfRKED/exec
+            src="https://script.google.com/macros/s/AKfycbyJnFdR4mBaW5m-WtSS68godsXUp5YNVkPmLI7P-JzFQoyEh3ZARhTXqUyjNXlfRKED/exec
             height="200px">
         </iframe>
 </body>
